--- a/index.html
+++ b/index.html
@@ -8,24 +8,43 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     function App () {
-      const [minutes, setMinutes] = React.useState()
+      const [amount, setAmount] = React.useState();
+      const [inverted, setInverted]= React.useState(false);
       const onChange = (event) => {
-        setMinutes(event.target.value);
+        setAmount(event.target.value);
+      };
+      const reset = () => setMinutes(0)
+      const onInvert = () => {
+        reset
+        setInverted((current) => !current)
       };
       return (
         <div>
-          <h1 className="hi">Super Converter</h1> 
-          <label htmlFor="minute">Minutes</label>
-          <input 
-            value={minutes} 
-            id="minutess" 
-            placeholder="Minutes" 
-            type="number" 
-            onChange={onChange} //리스너=> input에 변화가 생기면 onChange함수를 실행시켜줄거야
-          /> 
-          <h4> You want to convert {minutes}</h4>
-          <label htmlFor="hours">Hours</label>
-          <input id="hours" placeholder="Hours" type="number" />
+          <h1>Super Converter</h1> 
+          <div>
+            <label htmlFor="minute">Minutes</label>
+            <input 
+              value={inverted ? amount*60 : amount} 
+              id="minutes" 
+              placeholder="Minutes" 
+              type="number" 
+              onChange={onChange} //리스너=> input에 변화가 생기면 onChange함수를 실행시켜줄거야
+              disabled={inverted}
+            /> 
+          </div>
+          <div>
+            <label htmlFor="hours">Hours</label>
+            <input 
+              value={inverted ? amount : Math.round(amount / 60)} 
+              id="hours" 
+              placeholder="Hours" 
+              type="number" 
+              onChange={onChange} //리스너=> input에 변화가 생기면 onChange함수를 실행시켜줄거야
+              disabled={!inverted}
+            />
+         </div>
+          <button onClick={reset}>Reset</button>
+          <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
         </div>
       );
     }
@@ -33,3 +52,6 @@
     ReactDOM.render(<App />, root);
   </script>
 </html>
+
+
+
